fix description test

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       <section class="block">
         <header>Minha Lista de Tarefas</header>
         <p id="funcionamento">
-          Clique duas vezes em um item para marcá-lo como completo
+          Clique uma vezes em um item para marcá-lo ou desmarca-lo como completo
         </p>
       </section>
       <section id="button-and-input">
